# SpaceDragon

./: .gitignore  README.md
CyberAgentB/Assets/: SoundMixier.mixer
CyberAgentB/Assets/Animations/: Cube (4).controller  StartAnimation.anim  Target.anim  Text.controller
CyberAgentB/Assets/Materials/: Fire.mat  IceCube.mat  IceMaterial.mat  New Material.mat  drop.mat
CyberAgentB/Assets/Prefab/: Enemy.prefab  EnemyRock.prefab  Fire.prefab  Ice.prefab  IceEnemy.prefab  Main Camera.prefab  Particle System.prefab  Sphere 1.prefab  Sphere.prefab  bom.prefab  rock1.prefab
CyberAgentB/Assets/Prefab/UI/: CircularIndicator.prefab
CyberAgentB/Assets/Prefabs/ProtoType/: Bullet ProtoType.prefab  Particle System.prefab  Target.prefab
CyberAgentB/Assets/Resources/: EnemyRock2.prefab  Hp.prefab  Life.prefab
CyberAgentB/Assets/Scenes/: PreStageIntro.unity  ProtoType.unity  ProtoType_Fire.unity  ProtoType_VR.unity  ProtoType_view.unity  Prototype_UI.unity  Result.unity  STAGE.unity  SampleScene.unity  Start.unity
CyberAgentB/Assets/Scenes/ProtoType_Profiles/: PPS Profile.asset
CyberAgentB/Assets/Scripts/: AdaptiveDetectionStrategy.cs  DetectorStrategy.cs  EnemyManager.cs  FadeInPanel.cs  ISoundDetectionHandler.cs  ISoundDetector.cs  IceManager.cs  MicrophoneSoundDetector.cs  PeakDetector.cs  RockManager.cs  SimpleDetectionStrategy.cs  SingleRender.cs  Sound.cs
CyberAgentB/Assets/Scripts/ProtoType/: BreathModel.cs  (+8 more)
CyberAgentB/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
native-fft/: Cargo.toml
native-fft/src/: lib.rs
(+659 files in other folders)
