[package]
name = "native-fft"
version = "0.1.0"
authors = ["3c1u (Hikaru Terazono) <298748+3c1u@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "NativeFFT"
crate-type = ["cdylib"]

[dependencies]
rustfft = "3.0.0"
